# BetterTest

./: .gitmodules  CMakeLists.txt  bettertestVersionString.cmake  build_instructions.md  conanfile.py  readme.md  version_history.md
applications/testapp/: CMakeLists.txt
applications/testapp/include/testapp/: tests.h
applications/testapp/src/: main.cpp  tests.cpp
buildtools/profiles/: bettertest-examples-vs2022-debug.profile  bettertest-examples-vs2022-release.profile  bettertest-examples-vs2022-relwithdebinfo.profile  bettertest-package-vs2022-debug.profile  bettertest-package-vs2022-release.profile  bettertest-package-vs2022-relwithdebinfo.profile  bettertest-test-vs2022-debug.profile  bettertest-test-vs2022-release.profile  bettertest-test-vs2022-relwithdebinfo.profile
cmake/: MakeTarget.cmake
examples/: CMakeLists.txt
examples/example_01/: CMakeLists.txt
examples/example_01/src/: main.cpp
examples/example_02/: CMakeLists.txt
examples/example_02/src/: main.cpp
modules/: CMakeLists.txt
modules/bettertest/: CMakeLists.txt
modules/bettertest/include/bettertest/: run.h
modules/bettertest/include/bettertest/exceptions/: better_test_error.h  check_fatal_error.h  export_error.h  import_error.h
modules/bettertest/include/bettertest/mixins/: compare_mixin.h  exception_mixin.h  invalid_code_mixin.h  mixin_interface.h  mixin_results_getter.h
modules/bettertest/include/bettertest/output/: exporter_interface.h  importer_interface.h
modules/bettertest/include/bettertest/runners/: performance_test_runner.h  test_runner_interface.h  unit_test_runner.h
modules/bettertest/include/bettertest/suite/: performance_test_suite.h  suite_data.h  test_data.h  test_suite.h  unit_test_suite.h
modules/bettertest/include/bettertest/tests/: performance_test.h  test_interface.h  unit_test.h  unit_test_interface.h
modules/bettertest/include/bettertest/utils/: check_result.h  class_name.h  compare.h  date.h  hashing.h  name_filter.h  projections.h  result.h  to_string.h  try.h  type_traits.h  version.h
modules/bettertest/src/: run.cpp
modules/bettertest/src/exceptions/: better_test_error.cpp  check_fatal_error.cpp  export_error.cpp  import_error.cpp
modules/bettertest/src/mixins/: compare_mixin.cpp  exception_mixin.cpp  invalid_code_mixin.cpp  mixin_interface.cpp
modules/bettertest/src/output/: exporter_interface.cpp  importer_interface.cpp
modules/bettertest/src/runners/: test_runner_interface.cpp
modules/bettertest/src/suite/: performance_test_suite.cpp  suite_data.cpp  test_data.cpp  test_suite.cpp  unit_test_suite.cpp
modules/bettertest/src/utils/: check_result.cpp  compare.cpp  date.cpp  name_filter.cpp  version.cpp
